# confluent-kafka-python

./: .appveyor-disabled.yml  .appveyor.yml  .clang-format  .envrc  .flake8  .formatignore  .gitattributes  .gitignore  .travis.yml  .travis.yml.bak  0001-Updates-for-AsyncIO-and-other-improvements.patch  CHANGELOG.md  CLAUDE.md  CONTRIBUTOR.md  Consumer.c  DESIGN_AWS_OAUTHBEARER.md  DEVELOPER.md  IMPLEMENTATION_PLAN_AWS_OAUTHBEARER.md  INSTALL.md  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  Producer.c  README.md  SHARE_CONSUMER_ERRORS.md  aio_producer_class_diagram.md  aio_producer_simple_diagram.md  aio_producer_visual_class_diagram.md  build-manylinux-arm64.sh  cb_smoke.py  confluent_kafka.c  confluent_kafka.h  docker-compose.yml  integration_test.py  mypy.ini  outtest.out  pyproject.toml  pyvenv.cfg  requirements-all.txt  (+11 more)
.circleci/: config.yml
.ducktape/metadata/: session_id
.github/: CODEOWNERS  ISSUE_TEMPLATE  dependabot.yml
.github/workflows/: pip_install_on_python_prerelease.yml
.neetoci/: default.yml
.semaphore/: MCP.md  config.json  lsan-suppressions.txt  project.yml  project_public.yml  publish-pypi.yml  publish-test-pypi.yml  semaphore.yml  upload_to_s3.sh  valgrind-python.supp
SPECS/: python-confluent-kafka.spec
confluent_kafka/: __init__.py  config.py  configuration_constants.py  consumer.py  deserializing_consumer.py  error.py  producer.py  requirements.txt  serializing_producer.py
confluent_kafka/admin/: __init__.py
confluent_kafka/avro/: __init__.py  avro_consumer.py  avro_producer.py  cached_schema_registry_client.py  error.py  load.py  requirements.txt  schema.py
confluent_kafka/cimpl/: Consumer.c  confluent_kafka.c
confluent_kafka/kafkatest/: README  README.md  __init__.py  deploy.sh  globals.json  kafkatest_verifiable_consumer.py  kafkatest_verifiable_producer.py  verifiable_client.py  verifiable_consumer.py  verifiable_producer.py
confluent_kafka/schema_registry/: __init__.py  avro.py  cached_schema_registry_client.py  config.py  error.py  json_schema.py  protobuf.py  requirements.txt  schema.py  schema_registry_client.py  serdes.py
confluent_kafka/serialization/: __init__.py  _serializers.py  avro.py  error.py  kafka_builtins.py  kafka_serdes.py
confluent_kafka/serializer/: __init__.py
confluent_kafka/src/: Admin.c  AdminTypes.c  Consumer.c  Metadata.c  Producer.c  confluent_kafka.c  confluent_kafka.h  get_metadata_impl.c
debian/: changelog  control  rules
docker/: .env  docker-compose.yaml
docker/conf/: testconf.json
docker/kafka/: Dockerfile
docs/: Makefile  conf.py  index.rst  kip-848-migration-guide.md  kip-848-migration-guide.rst  kip-932-share-consumer.md  kip-932-share-consumer.rst  make-doc.bat  oauthbearer-aws.md  oauthbearer-aws.rst  python_share_consumer_errors.md  requirements.txt  share_consumer_error_mapping.md  share_consumer_error_reference.md  share_consumer_error_translation_implementation_plan.md  share_consumer_librdkafka_to_python_api_mapping.md
examples/: Makefile  README.md  Testcase-1_basic_share_consumer_aws_iam.py  Testcase-2_reauth_ack_commit_aws_iam.py  Testcase-3_auth_fail_token_fetch_error_aws_iam.py  Testcase-4_auth_fail_wrong_identity_pool_aws_iam.py  Testcase-5_auth_fail_unsecured_jwt_aws_iam.py  Testcase-6_reauth_refresh_cycles_aws_iam.py  Testcase-7_basic_share_consumer_oidc.py  adminapi.py  adminapi_logger.py  asyncio.py  asyncio_avro_producer.py  asyncio_example.py  avro-cli.py  avro_consumer.py  avro_consumer_encryption.py  avro_producer.py  avro_producer_encryption.py  avroconnsumer.py  avroproducer.py  confluent_cloud.py  consumer.py  consumer_logger.py  context_manager_example.py  cooperative_consumer.py  demo_producer.py  demo_share_consumer.py  demo_share_consumer_commit_async.py  demo_share_consumer_commit_sync.py  eos-transactions.py  eos_transactions.py  example_failed_broker.py  fips_producer.py  get_watermark_offsets.py  integration_test.py  json_consumer.py  json_consumer_encryption.py  json_producer.py  json_producer_encryption.py  (+41 more)
examples/avro/: user_generic.avsc  user_specific.avsc
examples/docker/: README.md  (+1 more)
mk-include/: cc-vault.mk
requirements/: requirements-all.txt  requirements-avro.txt  requirements-docs.txt  requirements-examples.txt  requirements-json-fast.txt  requirements-json.txt  requirements-oauthbearer-aws.txt  requirements-protobuf.txt  requirements-rules.txt  requirements-schemaregistry.txt  requirements-soaktest.txt  requirements-tests-install.txt  requirements-tests.txt  requirements.txt
results/: latest
scripts/: update-changelog.py
tests/: README.md  chaos-test.py  cluster_down.sh  cluster_up.sh  docker-compose.yaml  requirements.txt  run.sh  run_all.sh  run_all_tox.sh  run_test.sh  test_AIOConsumer.py  test_AIOProducer.py  test_Admin.py  test_Consumer.py  test_ConsumerRecords.py  test_DeserializingShareConsumer.py  test_KafkaError.py  test_Message.py  test_Messages.py  test_Producer.py  test_SerializerError.py  test_ShareConsumer.py  test_ShareConsumer_ack.py  test_ShareConsumer_callbacks.py  test_ShareConsumer_commit.py  test_ShareConsumer_leak_canary.py  test_TopicPartition.py  test_Wakeable.py  test_buffer_timeout_manager.py  test_callback_handler.py  test_callback_pool.py  test_config.py  test_docs.py  test_enums.py  test_error.py  test_kafka_batch_executor.py  test_kafka_error.py  test_log.py  test_message.py  test_misc.py  (+9 more)
tools/: README.md  RELEASE.md  bootstrap-librdkafka.sh  build-linux-selfcontained.sh  build-manylinux.sh  build-openssl.sh  cibuildwheel-build.sh  download-s3.py  fixup-wheels.sh  generate-record-row.py  generate_kafka_error_stub_codes.py  install-interceptors.sh  pre-release-validation.sh  prepare-cibuildwheel-linux.sh  prepare-osx.sh  prepare-tox.sh  quick-build-manylinux.sh  rebuild-wheel.py  requirements-manylinux.txt  smoketest.sh  source-package-verification.sh  style-format.sh  test-manylinux.sh  test-osx.sh  test-released-wheels.sh  test-wheels.sh  unasync.py  windows-build-wheel.bat  windows-build.bat  windows-copy-librdkafka.bat  windows-install-librdkafka-arm64.bat  windows-install-librdkafka.bat
(+524 files in other folders)
