[build-system]
requires = [ "poetry-core>=2.0.0,<3.0.0", "wheel"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
# only use poetry for dependency management
#package-mode = false
packages = [{include = "confluent_kafka", from = "src"}]

[tool.poetry.dependencies]
attrs = {version = ">=24", optional = true}
cachetools = {version = ">=5", optional = true}
httpx = {version = ">=0.28", optional = true}
avro = {version = ">=1.12", optional = true}
fastavro = [
    {version = "<1.10", python = "<3.9", optional = true},
    {version = ">=1.10", python = ">=3.9", optional = true}
]
requests = {version = ">=2.32", optional = true}
jsonschema = {version = ">=4.23", optional = true}
pyrsistent = {version = ">=0.20", optional = true}
googleapis-common-protos = {version = ">=1.66", optional = true}
protobuf = {version = "<5.0", optional = true}
azure-identity = {version = ">=1.19", optional = true}
azure-keyvault-keys = {version = ">=4.10", optional = true}
boto3 = {version = ">=1.35", optional = true}
cel-python = {version = ">=0.1", optional = true, python = ">=3.8,<4"}
google-auth = {version = ">=2.37", optional = true}
google-api-core = {version = ">=2.24", optional = true}
google-cloud-kms = {version = ">=3.2", optional = true}
hkdf = {version = ">=0.0.3", optional = true}
hvac = {version = ">=2.3", optional = true, python = ">=3.8,<4"}
jsonata-python = {version = ">=0.5", optional = true, python = ">=3.9"}
pyyaml = {version = ">=6.0", optional = true}
tink = {version = ">=1.10", optional = true}

[tool.poetry.extras]
schemaregistry = ["attrs", "cachetools", "httpx"]
avro = ["avro", "fastavro", "requests"]
json = ["jsonschema", "pyrsistent"]
protobuf = ["googleapis-common-protos", "protobuf"]
rules = ["azure-identity", "azure-keyvault-keys", "boto3", "cel-python", "google-auth",
    "google-api-core", "google-cloud-kms", "hkdf", "hvac", "jsonata-python", "pyyaml", "tink"]

[tool.poetry.group.docs.dependencies]
sphinx = {version = ">=8.1", python = ">=3.10"}
sphinx-rtd-theme = {version = ">=3.0", python = ">=3.10"}

[tool.poetry.group.tests.dependencies]
flake8 = {version = ">=7.1", python = ">=3.8.1"}
pytest = ">=8.3"
urllib3 = "<1.27"
pytest-timeout = ">=2.3"
requests-mock = ">=1.12"
respx = ">=0.22"
pytest-cov = {version = ">=6.0", python = ">=3.9"}

[tool.poetry.group.soaktest.dependencies]
psutil = ">=6.1"
opentelemetry-distro = ">=0.49"
opentelemetry-exporter-otlp = ">=1.15"

[project]
name = "confluent-kafka"
version = "2.8.0"
description = "Confluent's Python client for Apache Kafka"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules"]
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["dependencies", "optional-dependencies"]

[[project.authors]]
name = "Confluent Inc."
email = "support@confluent.io"

[project.urls]
Homepage = "https://github.com/confluentinc/confluent-kafka-python"
